--- a/index.css
+++ b/index.css
@@ -1,38 +1,50 @@
-html {
-    height: 100%;
-    width: 100%;
-    font-family: "Titillium Web", sans-serif;
-  }
-  
-  body {
-    min-height: 100%;
-    min-width: 100%;
-    background: linear-gradient(lightblue, blue);
-  }
-  
-  button {
-    font-size: 7px;
-  }
-  
-  #main-content {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    border: 1px solid #333;
-    background: rgba(255, 255, 255, 0.3);
-    padding: 15px 20px 18px 18px;
-    border-radius: 5px;
-    box-shadow: 2px 5px 5px #333;
-  }
-  
-  #list {
-    margin: 10px;
-    border: 1px solid #333;
-    background: rgba(255, 255, 255, 0.75);
-    padding: 15px 20px 18px 18px;
-    border-radius: 5px;
-    box-shadow: 2px 5px 5px #333;
-  }
-  
+@media screen {
+    /* ---Reset Styles ---*/
+    * {
+        list-style: none;
+        margin: 10px;
+        padding: 2px;
+    }
+
+    body {
+        background-color: lightblue;
+        color: #333;
+        font-family: sans-serif;
+        line-height: 18px;
+    }
+    
+    h1 {
+        font-size: 36px;
+        line-height: 54px;
+    }
+
+    h2 {
+        border-bottom: 2px solid #333;
+        font-size: 24px;
+        line-height: 36px;
+        margin-bottom: 16px;
+    }
+
+    h3 {
+        font-size: 18px;
+        line-height: 36 px;
+    }
+
+    p {
+        margin-bottom: 18px;
+    }
+
+    .main {
+        overflow: hidden;
+    }
+
+    .branding {
+        clear: both;
+    }
+
+    footer.branding {
+        border-top: 2px solid #333;
+        margin-top: 20px;
+        padding-top: 20px;
+    }
+}
