--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@
     }
 
     body {
-        background-color: lightblue;
+        background-color: rgb(135, 141, 143);
         color: #333;
         font-family: sans-serif;
         line-height: 18px;
